// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Antd/FileList/utils/getTableColumns returns table columns correctly for non-json validators: non-json validators columns 1`] = `
Array [
  Object {
    "dataIndex": "identifier",
    "ellipsis": true,
    "key": "identifier",
    "sortOrder": undefined,
    "sorter": [Function],
    "title": "Identifier",
  },
  Object {
    "dataIndex": "label",
    "ellipsis": true,
    "key": "label",
    "sortOrder": undefined,
    "sorter": [Function],
    "title": "File Name",
  },
  Object {
    "dataIndex": "version",
    "ellipsis": true,
    "key": "version",
    "sortOrder": undefined,
    "sorter": [Function],
    "title": "File Version",
  },
  Object {
    "dataIndex": "createdAt",
    "ellipsis": true,
    "key": "createdAt",
    "render": [Function],
    "sortOrder": undefined,
    "sorter": [Function],
    "title": "Created at",
  },
  Object {
    "dataIndex": "module",
    "key": "module",
    "title": "Module",
  },
  Object {
    "key": "action",
    "render": [Function],
    "title": "Action",
  },
]
`;

exports[`components/Antd/FileList/utils/getTableColumns returns table columns: table columns 1`] = `
Array [
  Object {
    "dataIndex": "identifier",
    "ellipsis": true,
    "key": "identifier",
    "sortOrder": undefined,
    "sorter": [Function],
    "title": "Identifier",
  },
  Object {
    "dataIndex": "label",
    "ellipsis": true,
    "key": "label",
    "sortOrder": undefined,
    "sorter": [Function],
    "title": "File Name",
  },
  Object {
    "dataIndex": "version",
    "ellipsis": true,
    "key": "version",
    "sortOrder": undefined,
    "sorter": [Function],
    "title": "File Version",
  },
  Object {
    "dataIndex": "createdAt",
    "ellipsis": true,
    "key": "createdAt",
    "render": [Function],
    "sortOrder": undefined,
    "sorter": [Function],
    "title": "Created at",
  },
  Object {
    "key": "action",
    "render": [Function],
    "title": "Action",
  },
]
`;
